--- a/chucky/src/app/home/home.component.html
+++ b/chucky/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
 		<!-- Start Landing Section-->
 		<div class="welcome">
-        <img src="http://localhost:3000/chucky/cover.png" class="img-fluid" alt="Responsive image">
+        <img src="../../cover.png" class="img-fluid" alt="Responsive image">
         <div class="d-flex flex-column align-items-center landing">
         	<button type="button" class="btn btn-outline-light btn-lg" routerLink="/galerie">Galerie</button>
         </div>
