--- a/chucky/src/app/footer/footer.component.html
+++ b/chucky/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         <footer>
           <div class="container d-flex justify-content-center text-center">
             <div class="col-md-6">
-            <img src="http://localhost:3000/chucky/tag.png" class="img-fluid w-25 mt-4" alt="chucky">
+            <img src="../../tag.png" class="img-fluid w-25 mt-4" alt="chucky">
             <p class="py-2 lead">Chucky is the name, remember the name</p>
             <!-- <ul class=" social pt-3 mb-5">
                 <li><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
