--- a/chucky/src/app/header/header.component.html
+++ b/chucky/src/app/header/header.component.html
@@ -18,7 +18,7 @@
 		<!-- Start Nav Section-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   	<a class="navbar-brand" href="#">
-  		<img src="../../tag.png" class="img-fluid" style="width: 100px;" alt="chucky">
+  		<img src="https://res.cloudinary.com/douscs2ve/image/upload/v1621463657/tag_rrsa1n.png" class="img-fluid" style="width: 100px;" alt="chucky">
   	</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
