--- a/chucky/src/app/home/home.component.html
+++ b/chucky/src/app/home/home.component.html
@@ -11,7 +11,8 @@
 
 		<!-- Start Landing Section-->
 		<div class="welcome">
-        <img src="https://res.cloudinary.com/douscs2ve/image/upload/v1621463712/cover_sgixml.png" class="img-fluid" alt="Responsive image">
+        <img src="https://scontent.ftun5-1.fna.fbcdn.net/v/t1.6435-0/p600x600/78910886_159704808745029_5203199492936957952_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=e3f864&_nc_ohc=EM1l_--JXm8AX-cCJw9&_nc_ht=scontent.ftun5-1.fna&tp=6&oh=21237e25fa02032491f04ece69ce94c8&oe=60CADFD9" 
+        class="img-fluid" alt="Responsive image">
         <div class="d-flex flex-column align-items-center landing">
         	<button type="button" class="btn btn-outline-light btn-lg" routerLink="/galerie">Galerie</button>
         </div>
